<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true">
 <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
         android:background="#ffffff">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:orientation="vertical"
            android:padding="10dip" >

            <TextView
		        android:id="@+id/textView1"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/login"
		        android:textAppearance="?android:attr/textAppearanceMedium"
		        android:layout_marginTop="20dp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:text="@string/email"
                android:layout_marginTop="30dp"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <EditText 
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="textEmailAddress"
                android:layout_marginTop="14dp"
                android:hint="@string/emailhint">
               <requestFocus />
            </EditText>
            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginTop="30dp"
                android:text="@string/password"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <EditText 
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ems="10"
                android:inputType="textPassword"
                android:layout_marginTop="14dp"
                android:hint="@string/passhint"/>

            <Button
                android:id="@+id/btnlogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnlogin" 
                android:layout_marginTop="20dp"/>
            <TextView
                android:id="@+id/forgot"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:text="@string/forgot"
                android:paddingLeft="20dp"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <TextView
                android:id="@+id/register"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:text="@string/register"
                android:paddingLeft="20dp"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </LinearLayout>
  		   
        </RelativeLayout>
        </ScrollView>
