<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true">
 <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
         android:background="#ffffff">
 
        <!--  Header  Starts-->
        <LinearLayout android:id="@+id/header"
                android:layout_width="fill_parent"
                android:layout_height="80dp"
                android:background="@layout/header_gradient"
                android:paddingTop="5dip"
                android:paddingBottom="5dip">
                <!-- Logo Start-->
                <ImageView android:src="@drawable/logo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dip"
                            android:contentDescription="@string/headerlogo" />
                <!-- Logo Ends -->
        </LinearLayout>
        <!--  Header Ends -->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:orientation="vertical"
            android:padding="10dip" >

            <ImageView
                android:id="@+id/screencompare"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="14dp"
                android:layout_marginTop="100dp"
                android:contentDescription="@string/comparisoncontent"
                android:src="@drawable/screenchart" />

            <ImageView
                android:id="@+id/screenadmin"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@+id/screencompare"
                android:layout_marginRight="14dp"
                android:contentDescription="@string/admincontent"
                android:src="@drawable/screendmin" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="100dp"
                android:layout_height="20dp"
                android:layout_alignLeft="@+id/screencompare"
                android:layout_below="@+id/screencompare"
                android:paddingLeft="11dp"
                android:text="@string/comparison" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="100dp"
                android:layout_height="20dp"
                android:layout_alignBottom="@+id/textView2"
                android:layout_alignLeft="@+id/screenadmin"
                android:paddingLeft="37dp"
                android:text="@string/admin" />
            
             <ImageView
                android:id="@+id/screensearch"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignLeft="@+id/textView2"
                android:layout_below="@+id/textView2"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/contentfind"
                android:src="@drawable/screenserch" />

             <ImageView
                 android:id="@+id/screenhelp"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:contentDescription="@string/helpcontent"
                 android:layout_alignRight="@+id/textView3"
                 android:layout_alignTop="@+id/screensearch"
                 android:src="@drawable/screenhelp" />

             <TextView
                 android:id="@+id/textView1"
                 android:layout_width="wrap_content"
                 android:layout_height="20dp"
                 android:layout_alignLeft="@+id/screensearch"
                 android:layout_below="@+id/screensearch"
                 android:paddingLeft="8dp"
                 android:text="@string/find" />

             <TextView
                 android:id="@+id/textView4"
                 android:layout_width="100dp"
                 android:layout_height="20dp"
                 android:layout_alignLeft="@+id/screenhelp"
                 android:layout_below="@+id/screenhelp"
                 android:paddingLeft="37dp"
                 android:text="@string/help" />

             <ImageView
                 android:id="@+id/screeninfo"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:layout_below="@+id/textView1"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="16dp"
                 android:contentDescription="@string/aboutuscontent"
                 android:src="@drawable/screeninfo" />

             <TextView
                 android:id="@+id/textView5"
                 android:layout_width="100dp"
                 android:layout_height="20dp"
                 android:layout_alignLeft="@+id/screeninfo"
                 android:layout_below="@+id/screeninfo"
                 android:paddingLeft="20dp"
                 android:text="@string/aboutus" />

        </RelativeLayout>
  		   
        </RelativeLayout>
        </ScrollView>
