<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true">
 <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
         android:background="#ffffff">

        <!-- Comparison Form starts -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:orientation="vertical"
            android:padding="10dip">
                 
             <TextView
                android:id="@+id/instruction"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/instructions1"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#372c24" />
           <!-- Location  --> 
			<TextView
                android:id="@+id/textView2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/county"
                android:layout_marginTop="20dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#372c24" />
			<Spinner
                android:id="@+id/countyspinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/county"
                android:prompt="@string/countyprompt"
                android:layout_marginTop="20dp">
                <requestFocus> </requestFocus>               
                </Spinner>
                
            
			<!-- Location End -->   
			
			<!-- Store Type Start -->
            <TextView
                android:id="@+id/storetype"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/storetype"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#372c24" />
            
             <Spinner
                android:id="@+id/stores"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/Storetype"
                android:prompt="@string/storeprompt"
                android:layout_marginTop="10dp" />
             
             <!-- Store Type Ends --> 
			
			<!-- Item Start -->         
			<TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/item"
                android:textAppearance="?android:attr/textAppearanceMedium" />
			
			<EditText
                android:id="@+id/itemsearch"
                android:layout_width="match_parent"
                android:layout_height="60dip"
                android:layout_marginTop="10dp"
                android:ems="10" 
                android:hint="@string/itemhint"/>
			
			<!-- Item End -->
			
			
             
             <!-- Submit Start -->

            <Button
                android:id="@+id/search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/searchbtn" />

            <!-- Submit Ends -->   

        </LinearLayout>
  		<!-- Comparison form Ends -->
  		   
        </RelativeLayout>
        </ScrollView>
