<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true">
 <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
         android:background="#ffffff">       

        <!-- Comparison Form starts -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:orientation="vertical"
            android:padding="10dip">
                 
             <TextView
                android:id="@+id/instruction"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/instructions"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#372c24" />
           <!-- Location  --> 
			<TextView
                android:id="@+id/textView2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:layout_marginTop="20dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#372c24" />
			<EditText
                android:id="@+id/location"
                android:layout_width="fill_parent"
                android:layout_height="60dip"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/locationhint"
                android:singleLine="true"
                android:logo="@drawable/ic_action_location_found">
                     <requestFocus />
            </EditText>
            
			<!-- Location End -->    
			
			<!-- Item Start -->         
			<TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/item"
                android:textAppearance="?android:attr/textAppearanceMedium" />
			
			<EditText
                android:id="@+id/item"
                android:layout_width="match_parent"
                android:layout_height="60dip"
                android:layout_marginTop="10dp"
                android:ems="10" 
                android:hint="@string/itemhint"/>
			
			<!-- Item End -->
			
			<!-- Store Type Start -->
            <TextView
                android:id="@+id/storetype"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/storetype"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#372c24" />
            
             <Spinner
                android:id="@+id/storetypespinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/Storetype"
                android:prompt="@string/storeprompt"
                android:layout_marginTop="10dp" />
             
             <!-- Store Type Ends -->
             
             <!-- Submit Start -->

            <Button
                android:id="@+id/compare"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/button" />

            <!-- Submit Ends -->   

        </LinearLayout>
  		<!-- Comparison form Ends -->
  		   
        </RelativeLayout>
        </ScrollView>
