<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true">
 <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
         android:background="#ffffff">
 
        <!--  Header  Starts-->
        <LinearLayout android:id="@+id/header"
                android:layout_width="fill_parent"
                android:layout_height="80dp"
                android:background="@layout/header_gradient"
                android:paddingTop="5dip"
                android:paddingBottom="5dip">
                <!-- Logo Start-->
                <ImageView android:src="@drawable/logo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dip"
                            android:contentDescription="@string/headerlogo" />
                <!-- Logo Ends -->
        </LinearLayout>
        <!--  Header Ends -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:orientation="vertical"
            android:padding="10dip" >

            <TextView
		        android:id="@+id/textView1"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/passins"
		        android:textAppearance="?android:attr/textAppearanceMedium"
		        android:layout_marginTop="75dp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:text="@string/email"
                android:layout_marginTop="20dp"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <EditText 
                android:id="@+id/email2"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="textEmailAddress"
                android:layout_marginTop="14dp"
                android:hint="@string/emailhint">
               <requestFocus />
            </EditText>
            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:text="@string/passnew"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <EditText 
                android:id="@+id/passchange"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ems="10"
                android:inputType="textPassword"
                android:layout_marginTop="14dp"
                android:hint="@string/passhint"/>
             <TextView
                android:id="@+id/passnew"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:text="@string/confirmpass"
                android:textAppearance="?android:attr/textAppearanceMedium" />
             <EditText 
                android:id="@+id/passconfirm"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ems="10"
                android:inputType="textPassword"
                android:layout_marginTop="14dp"
                android:hint="@string/passhint"/>

            <Button
                android:id="@+id/btnupdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnupdate" 
                android:layout_marginTop="20dp"/>
        

        </LinearLayout>
  		   
        </RelativeLayout>
        </ScrollView>
